--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Linguist overrides
+_.md linguist-prose=false
 _.md linguist-vendored=false
 _.md linguist-generated=false
 _.md linguist-documentation=false
