--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,5 @@ _.md linguist-vendored=false
 _.md linguist-generated=false
 _.md linguist-documentation=false
 _.md linguist-detectable=true
+*.md linguist-language=Markdown
 git check-attr -a README.md
